test/error/iocheck/err5.rzy
// Error: query is not allowed to output

component
  Err5
    input
      query():R{0,100};
    
    output
      event();
      
    implementation elementary
    
    function bar()
      event();
    end
    
    function foo()
      bar();
    end
    
    function query():R{0,100}
      foo();
      return 0;
    end
    
  end

